# Ziafp

./: .gitignore  404.html  CNAME  Cargo.toml  build.rs  cfth.html  doc.html  getting-started.html  hashmap.json  index.html  justfile  readme.md  reg.bat  run.html
.doc/: .gitignore  cfth.md  doc.md  getting-started.md  index.md  package-lock.json  run.md
.doc/.vitepress/: config.mts
.github/workflows/: page.yml  pyinstaller.yml  release.yml
assets/: app.B2G-ICKW.js  cfth.md.9DBcwW1b.lean.js  doc.md.CmZTZze0.js  getting-started.md.CRhmD49e.js  getting-started.md.D-RB6atB.lean.js  getting-started.md.DhcvPA_h.js  index.md.CZoetsrW.js  index.md.Cjr93CDr.js  index.md.hkAM2udb.lean.js  run.md.CNuhWjPn.js  style.DM707k6A.css
assets/chunks/: image-2.GH964e0H.js  image-8.mfPpsQ9A.js  theme.D9hkYZ8r.js
client/: Cargo.toml
client/src/: main.rs
doc-modifier/: .gitignore  main.py  main_fastapi.py  main_flask.py  requirements.txt  run.py  test.py
doc-modifier/utils/: api.py  doc.py  docx.py  explorer.py  model.py  popup.py  utils.py
resources/: icon-cfth.rc  icon-doc.rc  icon-docx.rc  icon-ocr.rc
src/: lib.rs  logger.rs  main.rs  tray.rs  utils.rs  window.rs
src/utils/: dialog.rs  fs.rs  launch.rs  mod.rs  regedit.rs
