[package]
name = "Ziafp"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
winreg = "0.52.0"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"]}
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winbase", "handleapi", "fileapi", "namedpipeapi"] }
url = "2.5.2"
dotenv = "0.15.0"
chrono = "0.4.38"
