[package]
name = "ziafp"
version = "0.2.2"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "2.5.0"
winres = "0.1.12"

[features]
client = []
server = []

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
winreg = "0.52.0"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"]}
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.38"
warp = "0.3.7"
serde_json = "1.0.132"
native-dialog = "0.7.0"
is_elevated = "0.1.2"