[package]
name = "ziafp"
edition = "2021"
build = "build.rs"
authors = ["inintencunter <2911583893@qq.com>"]
homepage = "https://github.com/initialencounter/ziafp"
readme = "readme.md"
keywords = [
    "ziafp",
    "self-triggering",
    "self-triggering-tool",
]
license = "AGPL-3.0"
repository = "https://github.com/initialencounter/ziafp"


[build-dependencies]
embed-resource = "2.5.0"
winres = "0.1.12"

[features]
client = []
server = []
cfth = []
doc = []

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "cfth"
path = "src/bin/cfth.rs"
required-features = ["cfth"]

[[bin]]
name = "doc"
path = "src/bin/doc.rs"
required-features = ["doc"]

[dependencies]
lazy_static = "1.5.0"
regex = "1.11.1"
winreg = "0.52.0"
reqwest = {version = "0.12.8", features = ["blocking", "json", "multipart", "cookies"]}
tokio = { version = "1.41.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.38"
warp = "0.3.7"
serde_json = "1.0.132"
native-dialog = "0.7.0"
is_elevated = "0.1.2"
colored = "2.1.0"
tao = "0.30.5"
tray-icon = "0.19.1"
windows = { version = "0.58.0", features = [
  "Win32_UI_WindowsAndMessaging", 
  "Win32_Foundation", 
  "Win32_System_Console"
] }
image = "0.25.4"
copypasta = "0.10.1"
enigo = "0.2.1"
